--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
 </head>
 <body>
 
+ <nav>
+       
+        <a href="taxcalc.html">Finance Calculator</a>
+        <a href="piechartgen.html">Blogs</a>
+        <a href="index.html">Contact Us</a>
+            
+    </nav>
+
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
