--- a/piechartgen.html
+++ b/piechartgen.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en-US">
+<head>
+<style>
+
+#InputDiv{float:left;
+
+border: 1px solid blue;
+padding-top: 90px;
+}
+#piechart{float:left;
+border: 1px solid blue;
+}
+</style>
+</head>
 <body>
 
 
-<label for="income">income: </label>
+ <nav>
+       
+        <a href="taxcalc.html">Finance Calculator</a>
+        <a href="piechartgen.html">Blogs</a>
+        <a href="index.html">Contact Us</a>
+            
+    </nav>
+
+<div id="leftdiv"></div>
+<div id="corediv">
+<div id = "InputDiv">
+<label for="income   ">income: </label>
 <input type="number" min="0" id="income" placeholder="0" onkeypress="return (event.charCode !=8 && 
 event.charCode ==0 || (event.charCode >= 48 && event.charCode <= 57))"><br><br>
 
 
-<label for="saving">saving: </label>
+<label for="saving   ">saving: </label>
 <input type="number" min="0" id="saving" placeholder="0" onkeypress="return (event.charCode !=8 && 
 event.charCode ==0 || (event.charCode >= 48 && event.charCode <= 57))"><br><br>
 
@@ -27,11 +51,13 @@ event.charCode ==0 || (event.charCode >= 48 && event.charCode <= 57))"><br><br>
   
   <button id="mainb" onclick="displayMessage()">Submit</button>
   
-   <p id="error">ww</p>   
+   <p id="error"></p>   
 </div>
   
 <div id="piechart"></div>
+</div>
 
+<div id="rightdiv"></div>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 
 <script type="text/javascript">
@@ -109,7 +135,7 @@ unacconted=0;
 unacconted = income - (saving + investing +want + need );
  document.getElementById('error').innerHTML =(""); 
 }
-if ((saving + investing +want + need)> 0){
+if ((saving + investing +want + need + income)> 0){
 empty =0;
 }
 drawChart() ;
@@ -118,3 +144,7 @@ drawChart() ;
 
 </body>
 </html>
+
+
+
+
