--- a/taxcalc.html
+++ b/taxcalc.html
@@ -1,6 +1,16 @@
 <html>
 <body>
 
+
+ <nav>
+       
+        <a href="taxcalc.html">Finance Calculator</a>
+        <a href="piechartgen.html">Blogs</a>
+        <a href="index.html">Contact Us</a>
+            
+    </nav>
+
+
 <div id="CoreDiv">
  <!-- May add a new div that will hold a help button on top-->
 <!-- input feilds for user data-->
